; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_monreader.c_monreader_freeze.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_monreader.c_monreader_freeze.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.mon_private = type { i32*, i64, i64, i32, i32, i32, i32 }

@user_data_sever = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [66 x i8] c"Disconnecting the z/VM *MONITOR system service failed with rc=%i\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @monreader_freeze to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @monreader_freeze(%struct.device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.mon_private*, align 8
  %5 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %3, align 8
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.mon_private* @dev_get_drvdata(%struct.device* %6)
  store %struct.mon_private* %7, %struct.mon_private** %4, align 8
  %8 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %9 = icmp ne %struct.mon_private* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %51

11:                                               ; preds = %1
  %12 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %13 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %32

16:                                               ; preds = %11
  %17 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %18 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load i32, i32* @user_data_sever, align 4
  %21 = call i32 @iucv_path_sever(i32* %19, i32 %20)
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %16
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @pr_warning(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %24, %16
  %28 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %29 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = call i32 @iucv_path_free(i32* %30)
  br label %32

32:                                               ; preds = %27, %11
  %33 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %34 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %33, i32 0, i32 6
  %35 = call i32 @atomic_set(i32* %34, i32 0)
  %36 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %37 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %36, i32 0, i32 5
  %38 = call i32 @atomic_set(i32* %37, i32 0)
  %39 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %40 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %39, i32 0, i32 4
  %41 = call i32 @atomic_set(i32* %40, i32 0)
  %42 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %43 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %42, i32 0, i32 3
  %44 = call i32 @atomic_set(i32* %43, i32 0)
  %45 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %46 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %45, i32 0, i32 2
  store i64 0, i64* %46, align 8
  %47 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %48 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %47, i32 0, i32 1
  store i64 0, i64* %48, align 8
  %49 = load %struct.mon_private*, %struct.mon_private** %4, align 8
  %50 = getelementptr inbounds %struct.mon_private, %struct.mon_private* %49, i32 0, i32 0
  store i32* null, i32** %50, align 8
  store i32 0, i32* %2, align 4
  br label %51

51:                                               ; preds = %32, %10
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local %struct.mon_private* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @iucv_path_sever(i32*, i32) #1

declare dso_local i32 @pr_warning(i8*, i32) #1

declare dso_local i32 @iucv_path_free(i32*) #1

declare dso_local i32 @atomic_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
